# spotify-screensaver

./: .gitignore  Cargo.toml  README.md  server.js
SpotifyScreensaver/SpotifyScreensaver/: SpotifyScreensaver-Bridging-Header.h  SpotifyScreensaverView.swift  constants.json
SpotifyScreensaver/SpotifyScreensaver.xcodeproj/: project.pbxproj
SpotifyScreensaver/SpotifyScreensaver.xcodeproj/project.xcworkspace/xcuserdata/john.xcuserdatad/: UserInterfaceState.xcuserstate
SpotifyScreensaver/SpotifyScreensaver.xcodeproj/xcuserdata/john.xcuserdatad/xcschemes/: xcschememanagement.plist
spotify_screensaver/: Cargo.toml
spotify_screensaver/src/: main.rs  spotify.rs
src/: main.rs  response.html  spotify.rs
