[package]
name = "spotify_user"
version = "0.1.0"
edition = "2021"

[package.metadata.winres]
windows_subsystem = "windows"

[dependencies]
futures = "0.3.31"
reqwest = {version="0.12.8", features = ["json"]}
serde = {version= "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
pkce = "0.2.0"
url-search-params = "12.0.0"
csv = "1.3.1"
open = "5.3.1"
iced = {version = "0.13.1", features = ["image","smol"]}
tokio = { version = "1.41.1", features = ["full"] }
bytes = "1.8.0"
rfd = "0.15.4"
